--- a/.github/workflows/sync_garmin_cn_to_garmin_global.yml
+++ b/.github/workflows/sync_garmin_cn_to_garmin_global.yml
@@ -4,7 +4,9 @@ on:
   workflow_dispatch:
   schedule:
     #  每6小时检查一次
-    - cron: "0 */6 * * *"
+    # - cron: "0 */6 * * *"
+    # 从 7 点到 23 点，每小时零点整
+    - cron: "0 7-23 * * *"
   push:
     branches:
       - main
